--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,22 @@
 body
 {
-    color: deeppink;
+    color: rgba(25, 34, 34, 0.226);
     text-align: center;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 0%;
+    padding: 0%;
+}
+
+#container {
+width: auto;
+padding: 30px;
+text-align: justify;
+border: 3px solid rgb(187, 186, 186);
+margin: 30px;
+
+}
+
+#container h1 {
+    font-size: 18px;
 }
