--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: rgba(10, 12, 12, 0.226);
     text-align: center;
-    font-family:'Courier New', Courier, monospace;
+    font-family: "Arial";
     font-size: 16px;
     margin: 0%;
     padding: 0%;
