--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,7 @@
 body
 {
-
+   
+    background: black;
     color: rgba(17, 29, 31, 0.959);
     text-align: center;
     font-family: "Arial";
@@ -9,17 +10,25 @@ body
     padding: 0%;
 }
 #cabecera {
-    background-color: rgb(79, 2, 202);
-    box-shadow: 0px 2px 20px 0px rgba(46, 45, 48, 0.342);
+    background: rgb(77, 51, 119);
+    box-shadow: 0px 2px 20px 0px rgba(63, 61, 66, 0.342);
     color: rgb(255, 255, 255);
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
 }
 
+#logo {
+    
+    width: 20px;
+    vertical-align: middle;
+    
+}
+
 #cabecera #tagline {
     font-weight: normal;
     font-size: 0.8em;
+    padding: 0 0 0 1em;
 }
 
 #container {
@@ -32,11 +41,12 @@ margin: 30px;
 }
 
 #container #post {
+    background: white;
     font-size: 14px;
-    padding: 15px;
+    padding: 1em;
 }
 
 #container h1 {
-    font-size: 18px;
+    font-size: 20px;
     padding: 15px;
 }
