--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,3 +40,11 @@ margin: 30px;
     font-size: 18px;
     padding: 15px;
 }
+
+#container #footer {
+    
+    background: rgba(51, 56, 59, 0.493);
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
